frontend/sass/utils/_article.sass
@use './mixins' as mix
@use '../colors/colors' as color

article.article-wrapper
    margin: 0 auto
    max-inline-size: 100%
    
article
    .ingress-header
        block-size: auto

    .blog-header
        block-size: 32em
        margin: auto .5em
        max-inline-size: 27em
        box-shadow: 0 0 10px rgba(color.$dark-grey, 0.2)

    .blog-header, .ingress-header
        p
            padding: .5em 1em
            inline-size: 100%

        span
            margin: auto

    .article-content, .blog-header, .ingress-header
        code
            padding: 0.2em 0.4em
            border-radius: 4px
            color: color.$white
            background-color: color.$dark-grey
            font-family: 'Courier New', Courier, monospace

        pre
            padding: 1em
            border-radius: 4px
            background-color: color.$dark-grey

    article > header
        margin-block: 0em !important

    .article-content, .ingress-header
        font-size: 1.5em
        margin: 0em auto
        max-inline-size: 44em

    nav
        ul
            li
                margin: 0.5em
                display: inline
                a
                    color: color.$dark-grey
                    text-decoration: none
            padding: 0

    .article-content, .bio-content
        h1,h2,h3,h4,h5,h6
            a
                cursor: text
                color: inherit
                text-decoration: none

            text-align: left
        
        abbr
            cursor: help
            border-bottom: 1px dotted rgb(255, 69, 0)
            

    @include mix.text-wrap-safe()

article.bio
    h2
        font-size: 2.5em
    p
        text-align: justify
        max-inline-size: 50em
        margin: 0.5em auto

    ul
        li
            margin-block: .5em
        margin-inline: auto
        max-inline-size: 47em
    div
        margin: 3em auto
        max-inline-size: 50em

